--- a/weather/package.json
+++ b/weather/package.json
@@ -12,7 +12,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11",
-    "request": "^2.88.0"
+    "node-fetch": "^2.6.0",
+    "package.json": "^2.0.1",
+    "pug": "2.0.0-beta11"
   }
 }
