--- a/stress/Dockerfile
+++ b/stress/Dockerfile
@@ -1,3 +1,3 @@
 FROM registry.access.redhat.com/rhscl/httpd-24-rhel7
 
-CMD ab -dSrk -c 20 -n 50000000 http://${SCALE_SERVICE_HOST}:${SCALE_SERVICE_PORT}/index.php
+CMD ab -dSrk -c 20 -n 50000000 http://do-101-apps-git-jm-scale:8080/index.php
