--- a/weather/package.json
+++ b/weather/package.json
@@ -6,7 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "cookie-parser": "1.4.5",
+    "cookie-parser": "^1.4.5",
     "debug": "4.3.2",
     "dotenv": "10.0.0",
     "express": "4.17.1",
