--- a/contacts-troubleshoot/package.json
+++ b/contacts-troubleshoot/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/mywww"
+    "start": "node ./bin/www"
   },
 "dependencies": {
     "cookie-parser": "1.4.5",
